# dna-transcription-kata

./: .replit  LICENSE  README.md  pyproject.toml
data/: codons.json  peptides.json
src/: main.py
