[tool.poetry]
name = "dnatranscription-kata"
version = "0.1.0"
description = ""
authors = ["Nicholas A. Del Grosso"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
mypy = "^0.782"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
